[package]
name = "arkin-portfolio"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
serde = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
dashmap = { workspace = true }
time = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
typed-builder = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

mockall = { workspace = true }
test-case = { workspace = true }
test-log = { workspace = true }
