[package]
name = "arkin-strat-agent"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
kanal = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tonic = { workspace = true }
dashmap = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
