[package]
name = "arkin-strategies"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio-util = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
serde = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
derive_builder = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
test-case = { workspace = true }
test-log = { workspace = true }
