[package]
name = "arkin-strategies"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }
ort = { workspace = true }
ndarray = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
