[package]
name = "arkin-ws"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }

tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-rustls = { workspace = true }
async-tungstenite = { workspace = true }
futures = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
time = { workspace = true }
url = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
test-log = { workspace = true }
