[package]
name = "arkin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-cron = { path = "../arkin-cron" }
arkin-accounting = { path = "../arkin-accounting" }
arkin-audit = { path = "../arkin-audit" }
arkin-cli = { path = "../arkin-cli" }
arkin-persistence = { path = "../arkin-persistence" }
arkin-insights = { path = "../arkin-insights" }
arkin-ingestor-historical = { path = "../arkin-ingestor-historical" }
arkin-strat-crossover = { path = "../arkin-strat-crossover" }
arkin-strat-agent = { path = "../arkin-strat-agent" }
arkin-exec-strat-wide = { path = "../arkin-exec-strat-wide" }
arkin-exec-strat-taker = { path = "../arkin-exec-strat-taker" }
arkin-binance = { path = "../arkin-binance" }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
clickhouse = { workspace = true }
uuid = { workspace = true }
statrs = { workspace = true }
clap = { workspace = true }
rust_decimal = { workspace = true }
mimalloc = { version = "0.1.48", features = [ "v3" ] }
tonic = { workspace = true }



