[package]
name = "arkin"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
arkin-cli = { path = "../arkin-cli" }
arkin-core = { path = "../arkin-core" }
arkin-persistence = { path = "../arkin-persistence" }
arkin-data-provider = { path = "../arkin-data-provider" }
arkin-exec-binance = { path = "../arkin-exec-binance" }
arkin-exec-strat-wide = { path = "../arkin-exec-strat-wide" }
arkin-exec-strat-default = { path = "../arkin-exec-strat-default" }
arkin-insights = { path = "../arkin-insights" }
# arkin-cron = { path = "../arkin-cron" }
# arkin-accounting = { path = "../arkin-accounting" }
# arkin-audit = { path = "../arkin-audit" }
# arkin-data-provider-historical = { path = "../arkin-data-provider-historical" }
# arkin-strat-crossover = { path = "../arkin-strat-crossover" }
# arkin-strat-agent = { path = "../arkin-strat-agent" }
# arkin-exec-strat-default = { path = "../arkin-exec-strat-default" }
# arkin-sim-ingestor = { path = "../arkin-sim-ingestor" }

mimalloc = { version = "0.1", features = [ "v3" ] }

# Main
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
rust_decimal = { workspace = true }
time = { workspace = true }

# Quantile Export
serde = { workspace = true }
serde_json = { workspace = true }
clickhouse = { workspace = true }
statrs = { workspace = true }

# Triton GRPC
rand = { workspace = true }
tonic = { workspace = true }
