[package]
name = "integration-tests"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-audit = { path = "../arkin-audit" }
arkin-accounting = { path = "../arkin-accounting" }
arkin-persistence = { path = "../arkin-persistence" }
arkin-ingestor-binance = { path = "../arkin-ingestor-binance" }
arkin-insights = { path = "../arkin-insights" }
arkin-strat-crossover = { path = "../arkin-strat-crossover" }
arkin-exec-strat-taker = { path = "../arkin-exec-strat-taker" }
arkin-execution-sim = { path = "../arkin-execution-sim" }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
clickhouse = { workspace = true }
uuid = { workspace = true }
statrs = { workspace = true }
test-log = { workspace = true }
rust_decimal = { workspace = true }
rust_decimal_macros = { workspace = true }
