[package]
name = "integration-tests"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-persistence = { path = "../arkin-persistence" }
arkin-data-provider = { path = "../arkin-data-provider" }
# arkin-insights = { path = "../arkin-insights" }
# arkin-audit = { path = "../arkin-audit" }
# arkin-accounting = { path = "../arkin-accounting" }
# arkin-strat-crossover = { path = "../arkin-strat-crossover" }
# arkin-strat-agent = { path = "../arkin-strat-agent" }
# arkin-exec-strat-default = { path = "../arkin-exec-strat-default" }
# arkin-exec-strat-wide = { path = "../arkin-exec-strat-wide" }
# arkin-binance = { path = "../arkin-binance" }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
kanal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = { workspace = true }
time = { workspace = true }
reqwest = { workspace = true }
clickhouse = { workspace = true }
uuid = { workspace = true }
statrs = { workspace = true }
test-log = { workspace = true }
rust_decimal = { workspace = true }
