[tool.poetry]
name = "arkin-research"
version = "0.1.0"
description = ""
authors = ["Dorus Janssens <dorus.janssens@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
polars = "^1.3.0"
pyarrow = "^17.0.0"
connectorx = "^0.3.3"
python-dotenv = "^1.0.1"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
