[package]
name = "test-integration"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arkin-core = { path = "../arkin-core" }
arkin-persistence = { path = "../arkin-persistence" }
arkin-portfolio = { path = "../arkin-portfolio" }
arkin-ingestors = { path = "../arkin-ingestors" }
arkin-insights = { path = "../arkin-insights" }
arkin-strategies = { path = "../arkin-strategies" }
arkin-allocation = { path = "../arkin-allocation" }
arkin-ordermanager = { path = "../arkin-ordermanager" }
arkin-engine = { path = "../arkin-engine" }

[dev-dependencies]
tokio = { workspace = true }
tracing = { workspace = true }


test-log = { workspace = true }
